add reply by image

--- a/ChatHouse/app/src/main/res/layout/activity_room.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_room.xml
@@ -86,6 +86,7 @@
 
             <ImageView
                 android:id="@+id/reply_bar_image"
+                android:scaleType="centerCrop"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
