--- a/ChatHouse/app/src/main/res/layout/chat_reply_image_left.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_reply_image_left.xml
@@ -65,6 +65,7 @@
                     <ImageView
                         android:id="@+id/chat_repliedImage_left_image"
                         android:layout_width="wrap_content"
+                        android:scaleType="centerCrop"
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
@@ -118,6 +119,18 @@
                     android:textStyle="normal">
 
                 </TextView>
+
+                <ImageView
+                    android:id="@+id/chat_message_image_left_reply_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="4dp"
+                    android:maxWidth="250dp"
+                    android:maxHeight="600dp"
+                    android:layout_gravity="left"
+                    android:adjustViewBounds="true"
+                    app:srcCompat="@drawable/thumb_15951118880user"
+                    android:visibility="gone"/>
 
                 <TextView
                     android:id="@+id/chat_time_left_reply_image"
