--- a/ChatHouse/app/src/main/res/layout/chat_image_left.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_image_left.xml
@@ -52,7 +52,7 @@
                 <ImageView
                     android:adjustViewBounds="true"
                     android:id="@+id/chat_messageImage_left_image"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:maxWidth="250dp"
                     android:maxHeight="600dp"
