--- a/ChatHouse/app/src/main/res/layout/activity_login.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="30dp"
         android:ems="10"
         android:text=""
-        android:textColor="@color/design_default_color_error"
+        android:textColor="?colorOnSurface"
         app:layout_constraintBottom_toTopOf="@+id/Username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -66,8 +66,9 @@
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:hint="Email or Username"
+        android:textColorHint="?colorOnSurface"
         android:inputType="textEmailAddress"
-        android:textColor="@color/black"
+        android:textColor="?colorOnSurface"
         app:layout_constraintBottom_toTopOf="@+id/Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,8 +82,9 @@
         android:ems="10"
         android:fontFamily="sans-serif-condensed-light"
         android:hint="Password"
+        android:textColorHint="?colorOnSurface"
         android:inputType="textPassword"
-        android:textColor="@color/black"
+        android:textColor="?colorOnSurface"
         app:layout_constraintBottom_toTopOf="@+id/Signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +99,8 @@
         android:clickable="true"
         android:fontFamily="serif"
         android:text="You don't have an account? Sign up"
-        android:textColorLink="@color/black"
+        android:textColorLink="?colorOnSurface"
+        android:textColor="?colorOnSurface"
         app:layout_constraintBottom_toTopOf="@+id/Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
