--- a/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
+++ b/ChatHouse/app/src/main/res/layout/activity_sign_up.xml
@@ -148,7 +148,7 @@
         android:text=""
         android:textColor="#F50000"
         android:textSize="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
+        app:layout_constraintBottom_toTopOf="@+id/FirstNameInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Logo" />
