--- a/ChatHouse/app/src/main/res/layout/chat_image_right.xml
+++ b/ChatHouse/app/src/main/res/layout/chat_image_right.xml
@@ -29,6 +29,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:minHeight="100dp"
+                android:minWidth="100dp"
                 android:paddingTop="6dp"
                 android:paddingBottom="2dp"
                 android:paddingHorizontal="9dp">
